# PersonalFinanceTracker

./: .gitignore  BUILD_PROMPT.md  CLAUDE.md  DECISIONS.md  FEATURES.md  Makefile  SPEC.md
app/: .env.example  .gitignore  .ruff.toml  README.md  pyproject.toml  pytest.ini
app/core/: admin.py  auth.py  forms.py  middleware.py  models.py  money.py  subtypes.py  urls.py  utils.py  views.py
app/core/migrations/: 0001_initial.py  0002_allocationtarget_asset_category_essentialsstate_goal_and_more.py  0003_alter_asset_geography.py  0004_brokeraccount_instrument_dividendrecord_and_more.py  0005_backfill_asset_instrument.py  0006_dividend_corpaction_require_broker_account.py  0007_add_aionion_dividend_source.py  0008_brokeraccount_pan_brokeraccount_pan_holder_name.py
app/core/services/: allocation.py  assets.py  cashflow.py  categories.py  essentials.py  exports.py  goals.py  insights.py  investments.py  liabilities.py  lots.py  networth.py  periods.py  prices.py  snapshots.py  tags.py  transactions.py  xirr.py
app/core/tests/: test_allocation.py  test_asset_instrument_backfill.py  test_auth.py  test_cashflow.py  test_dashboard_views.py  test_essentials.py  test_exports.py  test_goals.py  test_goals_views.py  test_hello.py  test_imports.py  test_imports_statement.py  test_insights.py  test_investments.py  test_investments_views.py  test_lots.py  test_models.py  test_money.py  test_networth.py  test_periods.py  test_phase6_views.py  test_price_schedule.py  test_prices.py  (+7 more)
app/finance/: asgi.py  settings.py  wsgi.py
app/scripts/: dev.sh
app/templates/: base.html
(+74 files in other folders)
