[project]
name = "personal-finance-tracker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "crispy-tailwind>=1.0.3",
    "croniter>=2.0.5",
    "django>=6.0.4",
    "django-crispy-forms>=2.6",
    "django-environ>=0.13.0",
    "django-htmx>=1.27.0",
    "django-q2>=1.9.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.5",
    "psycopg[binary]>=3.3.3",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.11",
]
